# oop_exercise_07

./: CMakeLists.txt  command.cpp  command.h  document.cpp  document.h  editor.cpp  editor.h  factory.cpp  factory.h  figure.h  hexagon.cpp  hexagon.h  main.cpp  octagon.cpp  octagon.h  pentagon.cpp  pentagon.h  point.cpp  point.h  test_01.res  test_01.test  test_02.res  test_02.test  test_03.res  test_03.test
build2/: CMakeCache.txt  Makefile  buffer1.txt  cmake_install.cmake  oop_exercise_07
